# hunnigan

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  ollama.rs
templates/: agent
