[package]
name = "hunnigan"
authors = ["aubravo <alvaroubravo@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "An intelligence agent providing assistance directly where you need it. A CLI swiss army tool to interact with an Ollama hosted LLM."
license = "MIT"
license-file = "LICENSE"
documentation = "https://docs.rs/hunnigan"
homepage = "https://github.com/aubravo/hunnigan"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
confy = "0.6.1"
reqwest = {version = "0.12.12", features = ["json", "blocking"]}
serde = {version = "1.0.217", features = ["derive"]}
tera = "1.20.0"
termimad = "0.31.2"
tokio = {version = "1.43.0", features = ["full"]}
zenity = "3.6.1"
